# digital-twin

./: .gitignore  README.md
backend/: context.py  deploy.py  generate_cv_pdf.py  me.txt  pyproject.toml  requirements.txt  resources.py  server.py
backend/data/: cv.md  facts.json  summary.txt
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/components/: twin.tsx
memory/: .gitignore
scripts/: deploy.sh  destroy.sh
terraform/: main.tf  outputs.tf  prod.tfvars  terraform.tfvars  variables.tf  versions.tf
